fixed input bug that prevented backspacing to nothing; added aria-press attribute to type buttons; add a bit of padding and relative font sizing to monospace.css

--- a/src/css/monospace.css
+++ b/src/css/monospace.css
@@ -2,7 +2,7 @@
 
 :root {
   --font-family: "JetBrains Mono", monospace;
-  --line-height: 1.20rem;
+  --line-height: 1.4rem;
   --border-thickness: 2px;
   --text-color: #000;
   --text-color-alt: #666;
@@ -18,7 +18,7 @@
   font-weight: var(--font-weight-normal);
   font-style: normal;
   font-variant-numeric: tabular-nums lining-nums;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -296,7 +296,7 @@ input, button, textarea, select {
   border: var(--border-thickness) solid var(--text-color);
   padding: 
     calc(var(--line-height) / 2 - var(--border-thickness))
-    calc(1ch - var(--border-thickness));
+    calc(1.5ch - var(--border-thickness));
   margin: 0;
   font: inherit;
   font-weight: inherit;
